# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.592 2006/02/10 04:00:20 agaffney Exp $

*GLI-0.3 (27 Oct 2005)

  9 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  pre-create /lib64 dir and /lib -> /lib64 symlink if it exists on livecd
  copy /etc/{passwd,group,shadow} from livecd to chroot sans 'gentoo'
  src/GLIPortage.py:
  use tar to transfer files from image dir to /mnt/gentoo instead of 'cp -a'
  src/GLIStorageDevice.py,src/GLIInstallProfile.py,src/templates/x86AT.py:
  'resized' flag

  8 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  short circuit and check vdb directly if package begins with '='

  8 Feb 2006; Preston Cody <codeman@gentoo.org>
  added more packages to extra_packages list in IP

  6 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  10 tries to create filesystem instead of 3
  src/GLIPortage, src/GLIArchitectureTemplate.py:
  ignore_missing flag for copy_pkg_to_chroot()

  5 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  copy_pkg_to_chroot() uses $ROOT/vdb for ROOT= installs

  26 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  fix handling of 404 for real files
  src/net/server/GLIServerProfile.py:
  look for 'hostname' in attributes instead of 'name'

  22 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/SimpleXMLParser.py:
  initial support for 'include' in XML files
  src/GLIStorageDevice.py:
  initial support for %
  src/GLIClientController.py:
  add debugging statements to pre-install steps

  15 Jan 2006; Preston Cody <codeman@gentoo.org>
  webgli/configfiles:
  	check for key in etc_files['rc.conf'] to fix key error
  webgli/timezone: small fix.
  webgli/extrapackages: list-type fix
  webgli/services: same
  glimd: add/edit_client updates.
  