@@ -1,9 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.592 2006/02/10 04:00:20 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.593 2006/02/10 23:37:31 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  10 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/templates/x86ArchitectureTemplate.py:
+  I'm a complete fscking dumbass. I recorded the end sector for partitions that
+  weren't being touched, but I never used it when recreating them...the end was
+  calculated from the size in MB instead :/
 
   9 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
